Dump the bitmap of thumbnail if no thumbnail meta data associated.

When we cache the tab as thumbnail. It copies the bitmap from renderer
asynchronously and the bitmap will be put to thumbnail cache later.

But navigation can still happen, if the tab navigates to another URL,
the thumbnail metadata in thumbnail_cache.cc will be removed, if bitmap
arrives after this, we can dump the bitmap instead of assuming the
metadata is still there.

In VR related tests, we cache the thumbnail when ChromeActivity is
paused, and then the WebContent navigates to another URL, which erase
the thumbnail metadata, then the bitmap arrives.

Bug: 738490
Change-Id: I980d90020170f609c7aa4a17a1e42a18ab553a4a
Reviewed-on: https://chromium-review.googlesource.com/570782
Commit-Queue: Xing Liu <xingliu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487276}
Former-commit-id: 037c2473223cfc407d40dc54b4fb45eccbff453e